tests/literal_expr_unicode_diag_3/expected_diagnostics.txt
grammar.peg:1:10: error: This is not a valid code point.
 1 | Root <- '\U00110000'
   |          ~~~~~~~~~~
